<resources>
    <string name="app_name">In And Out</string>

    <!-- OrderActivity -->
    <string name="order_activity_header">Place an Order</string>
    <string name="double_double_text_view">Double Double</string>
    <string name="cheeseburger_text_view">Cheeseburger</string>
    <string name="fries_text_view">French Fries</string>
    <string name="shakes_text_view">Shakes</string>
    <string name="drinks_header">Fountain Drinks (pick size)</string>
    <string name="small_drink_text_view">Small</string>
    <string name="medium_drink_text_view">Medium</string>
    <string name="large_drink_text_view">Large</string>
    <string name="place_order_button">Place Order</string>

    <!-- SummaryActivity -->
    <string name="order_total_text_view">Order Total: %s</string>
    <string name="items_text_view">Items Ordered: %i</string>
    <string name="subtotal_text_view">Subtotal: %s</string>
    <string name="tax_text_view">Tax (%1$s): %2$s</string>
    <string name="new_order_button">Start New Order</string>

</resources>
